# pandopt

./: Dockerfile  PandOpt.py  README.md  Untitled.ipynb  Untitled1.ipynb  __init__.py  apply_benchmarks.ipynb  benchmark.csv  groupby_benchmark.ipynb  grouptest.ipynb  pandopt_demo_v1.ipynb  pyproject.toml  rolling_benchlark.ipynb
demos_n_examples/: UnderstandTheCodeTransformation.ipynb  apply_benchmarks.ipynb  benchmark_apply.csv  benchmark_rolling.csv  rolling_benchlark.ipynb  rolling_benchmarks.ipynb
demos_n_examples/Benchmarks/: benchmark_apply.csv  benchmark_rolling.csv  rolling_benchmarks.ipynb
demos_n_examples/UnderstandHowItWork/: Cummulative.ipynb  ManyWayToSum.ipynb  Rolling.ipynb  TheAggregateMagic.ipynb  TheCodeTransformation_NewVersion.ipynb
dev/: apply_contiguity_tests.ipynb  groupby_workfile.ipynb  grouptest.ipynb  pandopt_demo_v1.ipynb  rolling_workfile.ipynb  test.py  testcompilation.ipynb
pandopt/: PandOpt.py  PhD.code-workspace  __init__.py  frames.py  groups.py  math.py  rolls.py  transfcoders.py
pythonProject/: pyproject.toml
tests/: main.py  test_g.py
