[tool.poetry]
name = "pandopt"
version = "0.3"
description = "blazzing fast ligthweight pandas wrapper"
authors = ["remigenetaplo <remi.genet@aplo.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.0"
numba = "^0.59.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
